--- a/packages/qash-ui/packages/nextjs/package.json
+++ b/packages/qash-ui/packages/nextjs/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@getpara/react-sdk": "^2.0.0-alpha.73",
+    "@qash/types": "workspace:*",
     "@reactour/tour": "^3.8.0",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/web3.js": "^1.98.4",
