--- a/packages/qash-server/package.json
+++ b/packages/qash-server/package.json
@@ -80,6 +80,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "dotenv": "^16.4.7",
     "@golevelup/ts-jest": "^0.7.0",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/cli": "^11.0.14",
