--- a/packages/qash-ui/package.json
+++ b/packages/qash-ui/package.json
@@ -38,6 +38,7 @@
     "react-is": "^19.2.1",
     "react-loading-skeleton": "^3.5.0",
     "react-tooltip": "^5.29.1",
+    "socket.io-client": "^4.8.1",
     "recharts": "^3.1.0",
     "viem": "^2.41.2",
     "wagmi": "^2.16.0",
