Integrate avatar and balance

--- a/packages/qash-server/.env.example
+++ b/packages/qash-server/.env.example
@@ -45,3 +45,12 @@ DEFAULT_ROLE=user
 EMAIL_VERIFICATION_RESEND_INTERVAL=30
 PARA_JWKS_URL=https://api.beta.getpara.com/.well-known/jwks.json
 NODE_ENV=development
+
+# Supabase Storage
+S3_ENDPOINT=https://your-project.storage.supabase.co/storage/v1/s3
+S3_REGION=ap-southeast-2
+S3_ACCESS_KEY_ID=your-access-key-id
+S3_SECRET_ACCESS_KEY=your-secret-access-key
+S3_AVATAR_BUCKET=user-avatars
+S3_COMPANY_LOGO_BUCKET=company-logos
+S3_MULTISIG_LOGO_BUCKET=multisig-logos
