--- a/packages/qash-server/package.json
+++ b/packages/qash-server/package.json
@@ -32,6 +32,7 @@
     "puppeteer:install": "npx puppeteer browsers install chrome"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.978.0",
     "@getpara/server-sdk": "2.1.0",
     "@json2csv/plainjs": "^7.0.6",
     "@nestjs-modules/mailer": "^2.0.2",
@@ -63,6 +64,7 @@
     "joi": "^18.0.2",
     "json2csv": "^6.0.0-alpha.2",
     "jwks-rsa": "^3.2.0",
+    "multer": "^2.0.2",
     "nanoid": "^5.1.6",
     "nestjs-mailgun": "^4.0.3",
     "otplib": "^12.0.1",
@@ -88,6 +90,7 @@
     "@nestjs/testing": "^11.1.9",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "@types/nodemailer": "^7.0.4",
     "@types/supertest": "^6.0.3",
