--- a/packages/stateless-multisig-server/Cargo.toml
+++ b/packages/stateless-multisig-server/Cargo.toml
@@ -31,6 +31,7 @@ tokio = { version = "1.40", features = [
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1.0", features = ["raw_value"] }
 postcard = { version = "1.0", features = ["alloc"] }
+base64 = "0.22"
 
 # Utilities
 hex = "0.4"
@@ -41,6 +42,8 @@ anyhow = "1.0"
 thiserror = { version = "2.0", default-features = false }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+url = "2.5.8"
+reqwest = { version = "0.13.1", features = ["json"] }
 
 [dev-dependencies]
 miden-testing = "0.12.3"
