--- a/packages/qash-ui/package.json
+++ b/packages/qash-ui/package.json
@@ -7,7 +7,7 @@
     "dev": "pnpm --filter @qash/web dev",
     "build": "pnpm run -r build",
     "build:web": "pnpm --filter @qash/web build",
-    "build:docs": "pnpm --filter @qash/docs build",
+    "build:docs": "pnpm --filter qash-doc build",
     "start": "pnpm --filter @qash/web start",
     "lint": "pnpm --filter @qash/web lint",
     "format": "pnpm --filter @qash/web format"
