--- a/packages/qash-ui/packages/nextjs/package.json
+++ b/packages/qash-ui/packages/nextjs/package.json
@@ -30,6 +30,7 @@
     "miden-para": "^0.10.9",
     "miden-para-react": "^0.10.9",
     "next": "15.3.6",
+    "posthog-js": "^1.345.2",
     "qr-code-styling": "^1.9.2",
     "react": "^19.2.1",
     "react-day-picker": "^9.8.1",
