--- a/packages/qash-ui/packages/nextjs/package.json
+++ b/packages/qash-ui/packages/nextjs/package.json
@@ -12,7 +12,11 @@
   },
   "dependencies": {
     "@cosmjs/cosmwasm-stargate": "^0.37.0",
-    "@demox-labs/miden-sdk": "0.12.5",
+    "@miden-sdk/miden-sdk": "^0.13.0",
+    "@miden-sdk/miden-para": "^0.13.0",
+    "@miden-sdk/use-miden-para-react": "^0.13.0",
+    "@openzeppelin/miden-multisig-client": "^0.13.0",
+    "@openzeppelin/psm-client": "^0.13.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -27,8 +31,6 @@
     "graz": "^0.4.2",
     "immer": "^10.2.0",
     "lodash": "^4.17.21",
-    "miden-para": "^0.10.9",
-    "miden-para-react": "^0.10.9",
     "next": "15.3.6",
     "qr-code-styling": "^1.9.2",
     "react": "^19.2.1",
