--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,9 +6,18 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./dist/index.js",
-    "./dto/*": "./dist/dto/*.js",
-    "./enums": "./dist/enums/index.js"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./dto/*": {
+      "types": "./dist/dto/*.d.ts",
+      "default": "./dist/dto/*.js"
+    },
+    "./enums": {
+      "types": "./dist/enums/index.d.ts",
+      "default": "./dist/enums/index.js"
+    }
   },
   "scripts": {
     "build": "tsc",
@@ -17,6 +26,12 @@
   },
   "devDependencies": {
     "typescript": "^5.3.0"
+  },
+  "typesVersions": {
+    "*": {
+      "dto/*": ["dist/dto/*.d.ts"],
+      "enums": ["dist/enums/index.d.ts"]
+    }
   },
   "files": [
     "dist"
